--- a/2.htm
+++ b/2.htm
@@ -167,7 +167,7 @@
 
     <ul class="ref"> 
         <li>
-            <a href="index.htm"><b>HOME</b> </a>
+            <a href="index.html"><b>HOME</b> </a>
         </li>
         <li>
             <a href="2.htm"><b>NEWSLETTER</b></a>
